Removed context endpoint as of platform#338c2f5
